<resources>
    <string name="app_name">Bookventoria</string>
    <string name="menu_add_new_book_label">Add New Book</string>
    <string name="menu_settings_item_label">Sort Order</string>
    <string name="menu_add_demo_data_item_label">Add Demo Data</string>
    <string name="menu_delete_all_books_item_label">Delete All Books</string>
    <string name="menu_action_save">Save</string>
    <string name="save_button_text">Save</string>
    <string name="menu_action_edit">Edit</string>
    <string name="menu_action_delete">Delete</string>
    <string name="menu_action_close">Close Book</string>
    <string name="empty_view_title_text">You don\'t have any books yet.</string>
    <string name="empty_view_subtitle_text">Press the button below to add a new book or click below to add demo data.</string>
    <string name="empty_view_add_demo_data_text">____________\n\n\nAdd Demo Data</string>
    <string name="empty_view_low_inventory">No Books Have A Low Inventory Count.</string>
    <string name="empty_view_query_title_text">Query Yielded No Results</string>
    <string name="empty_view_supplier_books">No Books Found For This Supplier.</string>
    <string name="empty_view_genre">No Books Match Category: %s</string>
    <string name="empty_view_suppliers_big">You don\'t have any suppliers yet.</string>
    <string name="empty_view_suppliers_subtitle">Because you haven\'t entered any books yet.</string>
    <string name="empty_view_suppliers_image_description">Image depicting no suppliers.</string>
    <string name="formatted_column_id">id</string>
    <string name="formatted_column_book_name">Book Name</string>
    <string name="formatted_column_book_price">Price</string>
    <string name="formatted_column_book_quantity">Quantity</string>
    <string name="formatted_column_book_supplier_name">Supplier Name</string>
    <string name="formatted_column_book_supplier_phone">Supplier Phone</string>
    <string name="formatted_column_book_author">Author</string>
    <string name="formatted_column_book_genre">Genre</string>
    <string name="formatted_column_book_sales">Sales</string>
    <string name="genre_unknown">Unknown</string>
    <string name="genre_nonfiction">Nonfiction</string>
    <string name="genre_fiction">Fiction</string>
    <string name="genre_mystery_suspense">Mystery and Suspense</string>
    <string name="genre_childrens">Children\'s</string>
    <string name="genre_history">History</string>
    <string name="genre_finance_business">Finance, Business</string>
    <string name="genre_science_fiction_fantasy">Science Fiction, Fantasy</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_home_food">Home, Food, Cooking</string>
    <string name="genre_teens_young_adult">Teens, Young Adults</string>
    <string name="genre_other">Other, Miscellaneous</string>
    <string name="query_low_inventory_header">Low Inventory</string>
    <string name="query_books_with_sales_header">Books With Sales</string>
    <string name="query_all_books_header">All Books</string>
    <string name="query_by_genre">Books from Genre: %s</string>
    <string name="query_by_genre_header">Books By Genre</string>
    <string name="query_supplier_books_header">Books By Supplier</string>
    <string name="sample_book_name">Sample Book Name</string>
    <string name="sample_author">Author Name</string>
    <string name="total_books_in_table_header">Books in Table: %d \n\n</string>
    <string name="unknown_data_text">Unknown</string>
    <string name="detail_by_author">by %s</string>
    <string name="detail_call_now_button">Call Now</string>
    <string name="supplier_call_now_button">Call Supplier</string>
    <string name="supplier_view_other_books">View Books From Supplier</string>
    <string name="supplier_latest_activity">Latest Activity</string>
    <string name="supplier_latest_activity_summary_good"><![CDATA[You recently purchased <i>%s</i> from %s.
        You\'ve sold %d copies of <i>%s</i> thus far, and you have %d copies remaining.]]></string>
    <string name="supplier_latest_activity_summary_good_1"><![CDATA[You recently purchased <i>%s</i> from %s.
        You\'ve sold %d copies of <i>%s</i> thus far, but you only have 1 copy remaining.]]></string>
    <string name="supplier_latest_activity_summary_good_0"><![CDATA[You recently purchased <i>%s</i> from %s.
        You\'ve sold %d copies of <i>%s</i> thus far, but you\'re out of stock!]]></string>
    <string name="supplier_latest_activity_summary_bad_1"><![CDATA[You recently purchased <i>%s</i> from %s. The book hasn\'t taken off in popularity yet. You\'ve only sold 1 copy.]]></string>
    <string name="supplier_latest_activity_summary_bad_0"><![CDATA[You recently purchased <i>%s</i> from %s. The book hasn\'t taken off in popularity yet. You haven\'t sold any copies yet!]]></string>
    <string
        name="supplier_latest_activity_summary_bad_multiple"><![CDATA[You recently purchased <i>%s</i> from %s. The book hasn\'t taken off in popularity yet. You\'ve only sold %d copies.]]></string>
    <string name="supplier_latest_activity_summary_sample_good">You recently purchased \"How To
        Be A Player\" from Mars Books. You\'ve sold 20 copies of \"How To Be A Player\" thus
        far, and you have 50 copies remaining.</string>
    <string name="supplier_latest_activity_summary_bad_1_sample">You recently purchased \"How To
        Be A Player\" from Mars Books. The book hasn\'t taken off in popularity yet. You\'ve only sold 1 copy.</string>
    <string name="detail_phone_number_prefix">tel:</string>
    <string name="supplier_summary_text">Here is the detailed information about your
        supplier. To call this supplier, click the phone number below. \n\nTo view all the books
        from this supplier, click the button that says \"View All Books From This Supplier.\"</string>
    <string name="supplier_helpful_tips_text">To call this supplier, click the phone number listed above. To view all the
        books from this supplier, click the text that says <b>View Books From Supplier</b>.</string>
    <string name="supplier_tips">Helpful Tips</string>
    <string name="supplier_detail_page_title">Supplier Details</string>
    <string name="inventory_total_books"><![CDATA[<b>%d</b><br>Books]]></string>
    <string name="inventory_total_sales"><![CDATA[<b>%d</b><br>Sales]]></string>
    <string name="inventory_low_stock"><![CDATA[<b>%d</b><br>Low Stock]]></string>
    <string name="inventory_total_books_sample">120\nBooks</string>
    <string name="inventory_total_sales_sample">100\nSales</string>
    <string name="inventory_low_stock_sample">5\nLow Stock</string>
    <string name="inventory_summary_header">Inventory Snapshot</string>
    <string name="inventory_summary_footer">All Books</string>
    <string name="editor_section_book_details">Book Overview</string>
    <string name="editor_section_inventory_details">Inventory &amp; Sales</string>
    <string name="editor_section_supplier_details">Supplier Information</string>
    <string name="editor_section_update_button_text">Update</string>
    <string name="editor_section_spinner_tooltip">Select Book Genre</string>
    <string name="editor_section_book_name_text_input_tag">book_name_tag</string>
    <string name="editor_activity_save_button">Save</string>
    <string name="editor_activity_title_new_book">Add New Book</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <string name="editor_activity_book_name_heading">Name</string>
    <string name="editor_activity_book_author_heading">Author</string>
    <string name="editor_activity_genre_heading">Genre</string>
    <string name="editor_activity_price_heading">Price</string>
    <string name="editor_activity_sales_heading">Sales</string>
    <string name="editor_activity_quantity_heading">Quantity</string>
    <string name="editor_activity_supplier_name_heading">Supplier Name</string>
    <string name="editor_activity_supplier_phone_heading">Phone Number</string>
    <string name="editor_activity_book_name_sample">History of Life</string>
    <string name="editor_activity_sales_sample">250</string>
    <string name="editor_activity_price_sample">$19.99</string>
    <string name="editor_activity_quantity_sample">1,000</string>
    <string name="editor_activity_author_name_sample">Joey Smith</string>
    <string name="editor_activity_genre_sample">History</string>
    <string name="editor_activity_supplier_name_sample">Mars Books</string>
    <string name="editor_activity_supplier_phone_sample">(888)999-9999</string>
    <string name="editor_activity_book_name_hint">Enter Book Name.</string>
    <string name="editor_activity_price_hint">Enter Book Price</string>
    <string name="editor_activity_quantity_hint">Total books being added. Default is 1.</string>
    <string name="editor_activity_supplier_name_hint">Enter Supplier Name.</string>
    <string name="editor_activity_supplier_phone_hint">Enter Supplier Phone Number. Digits Only</string>
    <string name="editor_activity_author_name_hint">Enter Author Name</string>
    <string name="editor_activity_genre_hint">Select Genre From Pulldown</string>
    <string name="editor_activity_sales_hint">Enter the Number of Sales</string>
    <string name="editor_activity_new_book_name">Name</string>
    <string name="editor_activity_new_price">$0.00</string>
    <string name="editor_activity_new_quantity">0</string>
    <string name="editor_activity_new_supplier_name">Supplier Name</string>
    <string name="editor_activity_new_supplier_phone">Supplier Phone Number</string>
    <string name="editor_activity_new_author_name">Author</string>
    <string name="editor_activity_new_sales">0</string>
    <string name="editor_activity_book_name_instructions">Enter Book Name.</string>
    <string name="editor_activity_price_instructions">Required Field. Price in Cents. Numbers Only.</string>
    <string name="editor_activity_quantity_instructions">Total books being added. Default is 1.</string>
    <string name="editor_activity_supplier_name_instructions">Enter Supplier Name.</string>
    <string name="editor_activity_supplier_phone_instructions">Enter Supplier Phone Number. Digits Only</string>
    <string name="editor_activity_author_name_instructions">Enter Author Name</string>
    <string name="editor_activity_genre_instructions">Select Genre From Pulldown</string>
    <string name="editor_activity_sales_instructions">Enter the Number of Sales</string>
    <string name="update_book_successful">Book was updated!</string>
    <string name="update_book_error">Error Updating Book</string>
    <string name="add_book_error">Error Adding Book</string>
    <string name="updated_book_name">Book name updated</string>
    <string name="updated_author">Book author updated</string>
    <string name="updated_genre">Book genre updated</string>
    <string name="updated_price">Book price updated</string>
    <string name="updated_quantity">Book quantity updated</string>
    <string name="updated_sales">Book sales updated</string>
    <string name="updated_supplier_name">Supplier name updated</string>
    <string name="increment">&#8593;</string>
    <string name="decrement">&#8595;</string>
    <string name="settings_title">Sort Books</string>
    <string name="settings_order_by_label">Sort Books By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">_id</string>
    <string name="settings_order_by_book_id_label">Book ID</string>
    <string name="settings_sort_direction_label">Sort Direction</string>
    <string name="settings_sort_direction_key" translatable="false">sort_direction</string>
    <string name="settings_sort_direction_default" translatable="false">ASC</string>
    <string name="logs_clear_logs">Clear Logs</string>
    <string name="logs_view_logs">View User Logs</string>
</resources>