<?xml version="1.0" encoding="utf-8"?>

<!-- Options menu for the MainActivity -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <!--Add new book button/ menu item-->
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/menu_icon_add"
        android:orderInCategory="1"
        android:title="@string/menu_add_new_book_label"
        app:showAsAction="ifRoom" />

    <!--Insert demo data button/ menu item-->
    <item
        android:id="@+id/action_insert_demo_data"
        android:icon="@drawable/menu_icon_add_demo_data"
        android:orderInCategory="4"
        android:title="@string/menu_add_demo_data_item_label"
        app:showAsAction="never" />

    <!--Delete all books button/ menu item-->
    <item
        android:id="@+id/action_delete_all_books"
        android:icon="@drawable/menu_icon_delete_all_books"
        android:orderInCategory="3"
        android:title="@string/menu_delete_all_books_item_label"
        app:showAsAction="ifRoom" />

    <!--Sort Order settings button/ menu item-->
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/menu_icon_sort"
        android:orderInCategory="2"
        android:title="@string/menu_settings_item_label"
        app:showAsAction="always" />

    <!--View Logs settings button/ menu item-->
    <item
        android:id="@+id/action_view_logs"
        android:icon="@drawable/menu_icon_view_logs"
        android:orderInCategory="5"
        android:title="@string/logs_view_logs"
        app:showAsAction="never" />

    <!--Delete User Logs settings button/ menu item-->
    <item
        android:id="@+id/action_delete_logs"
        android:icon="@drawable/menu_icon_delete_logs"
        android:orderInCategory="6"
        android:title="@string/logs_clear_logs"
        app:showAsAction="ifRoom" />
</menu>