<?xml version="1.0" encoding="utf-8"?>

<!-- Options menu for the EditorActivity -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".BookEditActivity">

    <!--Close button / menu item-->
    <item
        android:id="@+id/action_close"
        android:icon="@drawable/menu_icon_close"
        android:title="@string/menu_action_close"
        app:showAsAction="never" />

    <!--Save button / menu item, doesn't need to show due to fab button-->
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_done"
        android:title="@string/menu_action_save"
        app:showAsAction="always" />

    <!--Delete button / menu item-->
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/menu_icon_delete"
        android:title="@string/menu_action_delete"
        app:showAsAction="always" />
</menu>