<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Created by Sonia M on 9/27/18 3:57 PM for educational purposes. Book, author, and supplier
  names are fictitious.
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background"
    tools:context=".BookDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Toolbar View-->
        <android.support.v7.widget.Toolbar
            android:id="@+id/detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/secondaryColor"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/DetailToolbar"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <!--Book Name-->
        <TextView
            android:id="@+id/book_name"
            style="@style/DetailTitleText"
            android:layout_below="@id/detail_toolbar"
            android:textSize="@dimen/detail_book_name_text"
            tools:text="@string/sample_book_name" />

        <!--Author-->
        <TextView
            android:id="@+id/author"
            style="@style/DetailTitleText"
            android:layout_below="@id/book_name"
            android:paddingBottom="@dimen/activity_margin"
            android:textSize="@dimen/detail_author_text"
            tools:text="@string/sample_author" />

        <LinearLayout
            android:id="@+id/detail_info_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/author"
            android:layout_margin="@dimen/narrow_activity_margin"
            android:orientation="vertical">

            <!--Book Overview Section-->
            <TextView
                android:id="@+id/inventory_section_heading"
                style="@style/DetailSectionHeadingGrey"
                android:background="@color/white_background"
                android:paddingBottom="@dimen/narrow_activity_margin"
                android:paddingTop="@dimen/activity_margin"
                android:text="@string/editor_section_book_details" />

            <!--Genre Section-->
            <TextView
                android:id="@+id/genre_section_heading"
                style="@style/DetailMiniHeadingsGreen"
                android:background="@color/white_background"
                android:paddingTop="@dimen/activity_margin"
                android:text="@string/formatted_column_book_genre" />

            <!--Genre-->
            <TextView
                android:id="@+id/genre"
                style="@style/DetailFieldsValues"
                android:layout_marginBottom="@dimen/divider_size"
                android:background="@color/white_background"
                android:paddingBottom="@dimen/activity_margin"
                tools:text="@string/editor_activity_genre_sample" />

            <!--Book Quantity-->
            <TextView
                android:id="@+id/quantity_heading"
                style="@style/DetailMiniHeadingsGreen"
                android:layout_marginTop="@dimen/divider_size"
                android:background="@color/white_background"
                android:paddingBottom="@dimen/narrow_activity_margin"
                android:paddingTop="@dimen/activity_margin"
                android:text="@string/editor_activity_quantity_heading" />

            <!--Horizontal Linear Layout for Increasing/ decreasing quantity-->
            <LinearLayout
                android:id="@+id/counter_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/divider_size"
                android:background="@color/white_background"
                android:paddingBottom="@dimen/activity_margin"
                android:paddingLeft="@dimen/detail_counter_margin"
                android:paddingRight="@dimen/detail_counter_margin">

                <!--Decrement button-->
                <TextView
                    android:id="@+id/decrement"
                    style="@style/DetailQuantityAdjustButtons"
                    android:layout_weight="1"
                    android:text="@string/decrement" />

                <!--Quantity-->
                <TextView
                    android:id="@+id/quantity"
                    style="@style/CounterQuantityText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    tools:text="@string/editor_activity_quantity_sample" />

                <!--Increment-->
                <TextView
                    android:id="@+id/increment"
                    style="@style/DetailQuantityAdjustButtons"
                    android:layout_weight="1"
                    android:text="@string/increment" />
            </LinearLayout>

            <!--Horizontal Linear Layout containing Sales and Price information-->
            <LinearLayout
                android:id="@+id/sales_price_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/divider_size"
                android:layout_marginTop="@dimen/divider_size"
                android:baselineAligned="false">

                <!--Vertical Linear Layout for Book Sales-->
                <LinearLayout
                    android:id="@+id/sales_section_view"
                    style="@style/SalesPriceLinearLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/divider_size"
                    android:layout_marginRight="@dimen/divider_size"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/detail_horizontal_margin_sales"
                    android:paddingStart="@dimen/detail_horizontal_margin_sales">

                    <TextView
                        style="@style/DetailMiniHeadingsGreen_MarginTop"
                        android:layout_marginTop="@dimen/activity_margin"
                        android:text="@string/editor_activity_sales_heading" />

                    <!--Sales-->
                    <TextView
                        android:id="@+id/sales"
                        style="@style/DetailFieldsValues"
                        tools:text="@string/editor_activity_quantity_sample" />
                </LinearLayout>

                <!--Vertical Linear Layout for Book Price-->
                <LinearLayout
                    android:id="@+id/price_section_view"
                    style="@style/SalesPriceLinearLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/divider_size"
                    android:layout_marginStart="@dimen/divider_size"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingEnd="@dimen/detail_horizontal_margin_price"
                    android:paddingRight="@dimen/detail_horizontal_margin_price">

                    <TextView
                        style="@style/DetailMiniHeadingsGreen_MarginTop"
                        android:layout_marginTop="@dimen/activity_margin"
                        android:text="@string/editor_activity_price_heading" />

                    <!--Book Price-->
                    <TextView
                        android:id="@+id/price"
                        style="@style/DetailFieldsValues"
                        tools:text="@string/editor_activity_price_sample" />
                </LinearLayout>
            </LinearLayout>

            <!--Supplier Info Section-->
            <TextView
                android:id="@+id/supplier_section_heading"
                style="@style/DetailSectionHeadingGrey"
                android:background="@color/white_background"
                android:paddingBottom="@dimen/activity_margin"
                android:paddingTop="@dimen/activity_margin"
                android:text="@string/editor_section_supplier_details" />

            <TextView
                style="@style/DetailMiniHeadingsGreen"
                android:text="@string/editor_activity_supplier_name_heading" />

            <!--Supplier Name-->
            <TextView
                android:id="@+id/supplier_name"
                style="@style/DetailFieldsValues"
                android:layout_marginBottom="@dimen/divider_size"
                tools:text="@string/editor_activity_supplier_name_sample" />

            <TextView
                style="@style/DetailMiniHeadingsGreen"
                android:layout_marginTop="@dimen/divider_size"
                android:paddingTop="@dimen/activity_margin"
                android:text="@string/editor_activity_supplier_phone_heading" />

            <!--Supplier Phone Number-->
            <TextView
                android:id="@+id/supplier_phone"
                style="@style/DetailFieldsValues"
                android:paddingBottom="@dimen/activity_margin"
                tools:text="@string/editor_activity_supplier_phone_sample" />

            <!--Call Now Button-->
            <Button
                android:id="@+id/call_now_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_button_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_margin"
                android:layout_marginTop="@dimen/divider_size"
                android:background="@color/secondaryDarkColor"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="@dimen/extra_narrow_activity_margin"
                android:text="@string/detail_call_now_button"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/editor_save_button_text_size" />
        </LinearLayout>

        <!--FAB button which will be used to edit book-->
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/author"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/default_activity_margin"
            android:layout_marginRight="@dimen/default_activity_margin"
            android:layout_marginTop="@dimen/detail_fab_vertical_margin"
            android:src="@drawable/menu_icon_edit"
            app:backgroundTint="@color/secondaryAccent" />
    </RelativeLayout>
</ScrollView>